have type stubs for sw360

--- a/pyrightconfig.stricter.json
+++ b/pyrightconfig.stricter.json
@@ -47,9 +47,9 @@
         "stubs/ldap3",
         "stubs/Markdown",
         "stubs/mysqlclient",
+        "stubs/networkx",
         "stubs/oauthlib",
         "stubs/openpyxl",
-        "stubs/networkx",
         "stubs/passlib",
         "stubs/peewee",
         "stubs/pexpect",
@@ -73,6 +73,7 @@
         "stubs/requests-oauthlib",
         "stubs/setuptools",
         "stubs/stripe",
+        "stubs/sw360",
         "stubs/tqdm",
         "stubs/ttkthemes",
         "stubs/vobject",
